--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.9.1",
     "core-js": "^3.19.3",
     "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
